--- a/src/main/java/view/TelaRealizarEmprestimo.form
+++ b/src/main/java/view/TelaRealizarEmprestimo.form
@@ -27,7 +27,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jlCpfUsuario" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="154" max="-2" attributes="0"/>
@@ -36,7 +36,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jlIDItem" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="txtIdItem" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtIdItem" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
